--- a/index.htm
+++ b/index.htm
@@ -14,22 +14,24 @@
         <header>
             <div class="topo">
                 <div class="container">
-                    <div class="row">
-                        <li class="redes">
-                            <ul class="icone"><i class="fab fa-facebook-f"></i></ul>
-                            <ul class="icone"><i class="fab fa-instagram"></i></ul>
-                            <ul class="icone"><i class="fab fa-youtube"></i></ul>
-                        </li>
+                    <div class="row top">
+                        <div>
+                            <p>Horário de Atendimento: 8h ás 18h</p>
+                        </div>
+                        <div>
+                            <li class="redes">
+                                <ul class="icone"><i class="fab fa-facebook-f"></i></ul>
+                                <ul class="icone"><i class="fab fa-instagram"></i></ul>
+                                <ul class="icone"><i class="fab fa-youtube"></i></ul>
+                            </li>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- <div>
-                <a><img id="whats" src="img/botao-whatsapp.png" alt="botão whatsapp"></a>
-            </div> -->
             <div class="container">
-                <div class="row linear">
+                <div class="row linear divisoria">
                     <div class="col-md-4 logo">
-                        <img src="img/logo-roda.png" alt="logo rodaforros">
+                        <a href="index.htm"><img src="img/logo-roda.png" alt="logo rodaforros"></a>
                     </div>
                     <nav class="col-md-8">
                         <li class="lista">
