--- a/index.htm
+++ b/index.htm
@@ -15,14 +15,14 @@
             <div class="topo">
                 <div class="container">
                     <div class="row top">
-                        <div>
+                        <div class="col-md-6">
                             <p>Horário de Atendimento: 8h ás 18h</p>
                         </div>
-                        <div>
+                        <div class="col-md-6">
                             <li class="redes">
-                                <ul class="icone"><i class="fab fa-facebook-f"></i></ul>
-                                <ul class="icone"><i class="fab fa-instagram"></i></ul>
-                                <ul class="icone"><i class="fab fa-youtube"></i></ul>
+                                <ul class="icone" id="face"><i class="fab fa-facebook-f"></i></ul>
+                                <ul class="icone" id="insta"><i class="fab fa-instagram"></i></ul>
+                                <ul class="icone" id="you"><i class="fab fa-youtube"></i></ul>
                             </li>
                         </div>
                     </div>
