--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>Cardoso Sancas | Home</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="css/geral.css" rel="stylesheet">
@@ -56,22 +57,22 @@
                 <div class="col-md-12">
                         <h2 class="titulo">Rodaforros</h2>
                 </div>
-                <div class="col-md-12 produtos">
-                    <div class="col-md-4 conteudo">
+                <div class="col-md-12  produtos">
+                    <div class="col-md-4 col-sm-12 col-xs-12 conteudo">
                         <img class="rodaforro" src="img/A60.jpg" alt="Rodaforro tipo A60">
                         <div class="produtotitulo"><h4 class="titulo">Rodaforro A60</h4></div>
                         <p>Assim mesmo, o entendimento das metas propostas obstaculiza a apreciação da importância do levantamento das variáveis envolvidas. O cuidado em identificar pontos críticos na complexidade dos estudos efetuados talvez venha a ressaltar a relatividade dos paradigmas corporativos. É claro que a mobilidade dos capitais internacionais exige a precisão e a definição do sistema de participação geral. O empenho em analisar o consenso sobre a necessidade de qualificação não pode mais se dissociar das posturas dos órgãos dirigentes com relação às suas atribuições. Acima de tudo, é fundamental ressaltar que a crescente influência da mídia aponta para a melhoria das novas proposições.
                          A prática cotidiana prova que a constante divulgação das informações oferece uma interessante oportunidade para verificação dos procedimentos normalmente adotados. Caros amigos, o desenvolvimento contínuo de distintas formas de atuação estimula a padronização das diversas correntes de pensamento. As experiências acumuladas demonstram que o aumento do diálogo entre os diferentes setores produtivos prepara-nos para enfrentar situações atípicas decorrentes das formas de ação. Todavia, a consulta aos diversos militantes representa uma abertura para a melhoria de todos os recursos funcionais envolvidos.
                         </p>
                     </div>
-                    <div class="col-md-4 conteudo">
+                    <div class="col-md-4 col-sm-12 col-xs-12 conteudo">
                         <img class="rodaforro" src="img/E35.jpg" alt="Rodaforro tipo E35">
                         <div class="produtotitulo"><h4 class="titulo">Rodaforro E35</h4></div>
                         <p>Assim mesmo, o entendimento das metas propostas obstaculiza a apreciação da importância do levantamento das variáveis envolvidas. O cuidado em identificar pontos críticos na complexidade dos estudos efetuados talvez venha a ressaltar a relatividade dos paradigmas corporativos. É claro que a mobilidade dos capitais internacionais exige a precisão e a definição do sistema de participação geral. O empenho em analisar o consenso sobre a necessidade de qualificação não pode mais se dissociar das posturas dos órgãos dirigentes com relação às suas atribuições. Acima de tudo, é fundamental ressaltar que a crescente influência da mídia aponta para a melhoria das novas proposições.
                         A prática cotidiana prova que a constante divulgação das informações oferece uma interessante oportunidade para verificação dos procedimentos normalmente adotados. Caros amigos, o desenvolvimento contínuo de distintas formas de atuação estimula a padronização das diversas correntes de pensamento. As experiências acumuladas demonstram que o aumento do diálogo entre os diferentes setores produtivos prepara-nos para enfrentar situações atípicas decorrentes das formas de ação. Todavia, a consulta aos diversos militantes representa uma abertura para a melhoria de todos os recursos funcionais envolvidos.
                         </p>
                     </div>
-                    <div class="col-md-4 conteudo">
+                    <div class="col-md-4 col-sm-12 col-xs-12 conteudo">
                         <img class="rodaforro" src="img/F80.jpg" alt="Rodaforro tipo F80">
                         <div class="produtotitulo"><h4 class="titulo">Rodaforro F80</h4></div>
                         <p>Assim mesmo, o entendimento das metas propostas obstaculiza a apreciação da importância do levantamento das variáveis envolvidas. O cuidado em identificar pontos críticos na complexidade dos estudos efetuados talvez venha a ressaltar a relatividade dos paradigmas corporativos. É claro que a mobilidade dos capitais internacionais exige a precisão e a definição do sistema de participação geral. O empenho em analisar o consenso sobre a necessidade de qualificação não pode mais se dissociar das posturas dos órgãos dirigentes com relação às suas atribuições. Acima de tudo, é fundamental ressaltar que a crescente influência da mídia aponta para a melhoria das novas proposições.
