--- a/index.htm
+++ b/index.htm
@@ -35,7 +35,7 @@
                         <div class="efeitinho"></div> 
                             <a href="index.htm"><img src="img/logo-roda.png" alt="logo rodaforros"></a>   
                     </div>
-                    <nav class="col-md-8">
+                    <nav class="col-md-8 menus">
                         <li class="lista">
                             <ul class="border"><a href="index.htm" class="menu">Home</a></ul>
                             <ul class="border"><a href="" class="menu">Produtos</a></ul>
@@ -43,6 +43,9 @@
                             <ul class="border"><a href="" class="menu">Entre em Contato</a></ul>
                         </li>
                     </nav>
+                    <div class="col-sm-12 col-xs-12 burguer">
+
+                    </div>
                 </div>
             </div>
         </header>
