--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>Cardoso Sancas | Home</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link href="css/geral.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">        <link href="css/geral.css" rel="stylesheet">
         <link href="css/home.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/60ef12384d.js"></script>
         <link rel="icon" type="image/png" href="img/fav.png">
@@ -16,16 +15,20 @@
             <div class="topo">
                 <div class="container">
                     <div class="row top">
-                        <div class="col-md-6 col-sm-12 col-xs-12">
-                            <p>Horário de Atendimento: 8h ás 18h</p>
-                        </div>
-                        <div class="col-md-6 col-sm-12 col-xs-12">
-                            <li class="redes">
-                                <ul class="icone" id="face"><i class="fab fa-facebook-f"></i></ul>
-                                <ul class="icone" id="insta"><i class="fab fa-instagram"></i></ul>
-                                <ul class="icone" id="you"><i class="fab fa-youtube"></i></ul>
-                            </li>
-                        </div>
+                            <div class="col-md-6 col-sm-12 col-xs-12">
+                                <p>Horário de Atendimento: 8h ás 18h</p>
+                            </div>
+                            <div class="col-md-6 col-sm-12 col-xs-12 redesPai">
+                                <li class="redes">
+                                    <ul class="icone" id="face"><i class="fab fa-facebook-f"></i></ul>
+                                    <ul class="icone" id="insta"><i class="fab fa-instagram"></i></ul>
+                                    <ul class="icone" id="you"><i class="fab fa-youtube"></i></ul>
+                                </li>
+                            </div>
+                            <button class="navbar-toggler burguer" type="button" data-toggle="collapse" data-target="#navbarSupportedContent22"
+                            aria-controls="navbarSupportedContent22" aria-expanded="false" aria-label="Toggle navigation" >
+                                    <div class="animated-icon3"><span></span><span></span><span></span></div>
+                            </button>
                     </div>
                 </div>
             </div>
@@ -43,9 +46,6 @@
                             <ul class="border"><a href="" class="menu">Entre em Contato</a></ul>
                         </li>
                     </nav>
-                    <div class="col-sm-12 col-xs-12 burguer">
-
-                    </div>
                 </div>
             </div>
         </header>
@@ -57,8 +57,8 @@
                 <div class="col-md-12 titulo">
                     <h1>Selecione seu produto abaixo:</h1>
                 </div>     
-                <div class="col-md-12">
-                        <h2 class="titulo">Rodaforros</h2>
+                <div class="col-md-12 titulo">
+                        <h2>Rodaforros</h2>
                 </div>
                 <div class="col-md-12  produtos">
                     <div class="col-md-4 col-sm-12 col-xs-12 conteudo">
@@ -67,6 +67,7 @@
                         <p>Assim mesmo, o entendimento das metas propostas obstaculiza a apreciação da importância do levantamento das variáveis envolvidas. O cuidado em identificar pontos críticos na complexidade dos estudos efetuados talvez venha a ressaltar a relatividade dos paradigmas corporativos. É claro que a mobilidade dos capitais internacionais exige a precisão e a definição do sistema de participação geral. O empenho em analisar o consenso sobre a necessidade de qualificação não pode mais se dissociar das posturas dos órgãos dirigentes com relação às suas atribuições. Acima de tudo, é fundamental ressaltar que a crescente influência da mídia aponta para a melhoria das novas proposições.
                          A prática cotidiana prova que a constante divulgação das informações oferece uma interessante oportunidade para verificação dos procedimentos normalmente adotados. Caros amigos, o desenvolvimento contínuo de distintas formas de atuação estimula a padronização das diversas correntes de pensamento. As experiências acumuladas demonstram que o aumento do diálogo entre os diferentes setores produtivos prepara-nos para enfrentar situações atípicas decorrentes das formas de ação. Todavia, a consulta aos diversos militantes representa uma abertura para a melhoria de todos os recursos funcionais envolvidos.
                         </p>
+                        <button class="btnProduto">Saiba mais</button>
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12 conteudo">
                         <img class="rodaforro" src="img/E35.jpg" alt="Rodaforro tipo E35">
@@ -74,6 +75,7 @@
                         <p>Assim mesmo, o entendimento das metas propostas obstaculiza a apreciação da importância do levantamento das variáveis envolvidas. O cuidado em identificar pontos críticos na complexidade dos estudos efetuados talvez venha a ressaltar a relatividade dos paradigmas corporativos. É claro que a mobilidade dos capitais internacionais exige a precisão e a definição do sistema de participação geral. O empenho em analisar o consenso sobre a necessidade de qualificação não pode mais se dissociar das posturas dos órgãos dirigentes com relação às suas atribuições. Acima de tudo, é fundamental ressaltar que a crescente influência da mídia aponta para a melhoria das novas proposições.
                         A prática cotidiana prova que a constante divulgação das informações oferece uma interessante oportunidade para verificação dos procedimentos normalmente adotados. Caros amigos, o desenvolvimento contínuo de distintas formas de atuação estimula a padronização das diversas correntes de pensamento. As experiências acumuladas demonstram que o aumento do diálogo entre os diferentes setores produtivos prepara-nos para enfrentar situações atípicas decorrentes das formas de ação. Todavia, a consulta aos diversos militantes representa uma abertura para a melhoria de todos os recursos funcionais envolvidos.
                         </p>
+                        <button class="btnProduto">Saiba mais</button>
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12 conteudo">
                         <img class="rodaforro" src="img/F80.jpg" alt="Rodaforro tipo F80">
@@ -81,6 +83,7 @@
                         <p>Assim mesmo, o entendimento das metas propostas obstaculiza a apreciação da importância do levantamento das variáveis envolvidas. O cuidado em identificar pontos críticos na complexidade dos estudos efetuados talvez venha a ressaltar a relatividade dos paradigmas corporativos. É claro que a mobilidade dos capitais internacionais exige a precisão e a definição do sistema de participação geral. O empenho em analisar o consenso sobre a necessidade de qualificação não pode mais se dissociar das posturas dos órgãos dirigentes com relação às suas atribuições. Acima de tudo, é fundamental ressaltar que a crescente influência da mídia aponta para a melhoria das novas proposições.
                         A prática cotidiana prova que a constante divulgação das informações oferece uma interessante oportunidade para verificação dos procedimentos normalmente adotados. Caros amigos, o desenvolvimento contínuo de distintas formas de atuação estimula a padronização das diversas correntes de pensamento. As experiências acumuladas demonstram que o aumento do diálogo entre os diferentes setores produtivos prepara-nos para enfrentar situações atípicas decorrentes das formas de ação. Todavia, a consulta aos diversos militantes representa uma abertura para a melhoria de todos os recursos funcionais envolvidos.
                         </p>
+                        <button class="btnProduto">Saiba mais</button>
                     </div>
                 </div>
             </div>
