--- a/index.htm
+++ b/index.htm
@@ -15,6 +15,14 @@
             <div class="topo">
                 <div class="container">
                     <div class="row top">
+                            <nav class="col-sm-12 col-xs-12 x">
+                                    <li class="lista">
+                                        <ul class="border"><a href="index.htm" class="menu">Home</a></ul>
+                                        <ul class="border"><a href="" class="menu">Produtos</a></ul>
+                                        <ul class="border"><a href="" class="menu">Faça um Orçamento</a></ul>
+                                        <ul class="border"><a href="" class="menu">Entre em Contato</a></ul>
+                                    </li>
+                                </nav>
                             <div class="col-md-6 col-sm-12 col-xs-12">
                                 <p>Horário de Atendimento: 8h ás 18h</p>
                             </div>
@@ -25,9 +33,8 @@
                                     <ul class="icone" id="you"><i class="fab fa-youtube"></i></ul>
                                 </li>
                             </div>
-                            <button class="navbar-toggler burguer" type="button" data-toggle="collapse" data-target="#navbarSupportedContent22"
-                            aria-controls="navbarSupportedContent22" aria-expanded="false" aria-label="Toggle navigation" >
-                                    <div class="animated-icon3"><span></span><span></span><span></span></div>
+                            <button class="navbar-toggler burguer" type="button">
+                                <div class="animated-icon3"><span></span><span></span><span></span></div>
                             </button>
                     </div>
                 </div>
