--- a/index.htm
+++ b/index.htm
@@ -15,14 +15,6 @@
             <div class="topo">
                 <div class="container">
                     <div class="row top">
-                            <nav class="col-sm-12 col-xs-12 x">
-                                    <li class="lista">
-                                        <ul class="border"><a href="index.htm" class="menu">Home</a></ul>
-                                        <ul class="border"><a href="" class="menu">Produtos</a></ul>
-                                        <ul class="border"><a href="" class="menu">Faça um Orçamento</a></ul>
-                                        <ul class="border"><a href="" class="menu">Entre em Contato</a></ul>
-                                    </li>
-                                </nav>
                             <div class="col-md-6 col-sm-12 col-xs-12">
                                 <p>Horário de Atendimento: 8h ás 18h</p>
                             </div>
@@ -36,6 +28,14 @@
                             <button class="navbar-toggler burguer" type="button">
                                 <div class="animated-icon3"><span></span><span></span><span></span></div>
                             </button>
+                            <nav class="col-sm-12 col-xs-12 menuMobile">
+                                <li class="lista">
+                                    <ul class="border"><a href="index.htm" class="menu">Home</a></ul>
+                                    <ul class="border"><a href="" class="menu">Produtos</a></ul>
+                                    <ul class="border"><a href="" class="menu">Faça um Orçamento</a></ul>
+                                    <ul class="border"><a href="" class="menu">Entre em Contato</a></ul>
+                                </li>
+                            </nav>
                     </div>
                 </div>
             </div>
@@ -95,6 +95,18 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="container">
+                <div class="row linear">
+                    <div class="col-md-6">
+
+                    </div>
+                    <div class="col-md-6">
+
+                    </div>                    
+                </div>
+            </div>
+        </footer>
         <script src="js/geral.js"></script>
     </body>
 </html>
